# fastapi_linebot_template

./: README.md  main.py  pyproject.toml
api/v1/: router.py
api/v1/endpoints/bot/: bot.py
